Add news section and update teaching section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: layout
 
 {% include intro.html %}
 
+{% include news.html %}
+
 {% include publications.html %}
 
 {% include teaching.html %}
