--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <img src='images/2021-icann-multistep.png', width="160", heigh="160">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                    <a href="https://arxiv.org/abs/2106.10075.pdf">
+                    <a href="https://arxiv.org/pdf/2106.10075.pdf">
                         <papertitle>Learning to Plan via a Multi-Step Policy Regression Method</papertitle>
                     </a>
                     <br>
@@ -128,7 +128,7 @@
                     <em>International Conference on Artificial Neural Networks (ICANN 2021)</em>
                     <br>
                     <a href="data/bib/wagner2021learning.bib">bibtex</a> / 
-                    <a href="https://arxiv.org/abs/2106.10075.pdf">paper</a> / 
+                    <a href="https://arxiv.org/pdf/2106.10075.pdf">paper</a> / 
                     <a href="data/posters/wagner2021learning.pdf">poster</a> 
                     <p></p>
                     <p>Our proposed policy horizon regression method learns a policy vector using policy distillation to predict multiple sequential actions for a single observation.</p>
