--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
              
               <p style="text-align:center">
                 <a href="mailto:tobias.uelwer@hhu.de">Email</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=Y5WkfA8AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://dblp.org/pid/242/9083.html&nbsp/&nbsp">DBLP</a>&nbsp/&nbsp
-                <a href="https://twitter.com/tuelwer">Twitter</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=Y5WkfA8AAAAJ">Google Scholar</a> / 
+                <a href="https://dblp.org/pid/242/9083.html&nbsp/&nbsp">DBLP</a> / 
+                <a href="https://twitter.com/tuelwer">Twitter</a> / 
                 <a href="https://github.com/tuelwer/">Github</a>
               </p>
             </td>
