--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               <p style="text-align:center">
                 <name>Tobias Uelwer</name>
               </p>
-              <p>I am a PhD student at the <a href="https://cs.hhu.de">Heinrich Heine University Düsseldorf</a> supervised by <a href="https://www.cs.hhu.de/en/research-groups/machine-learning/our-team/team/harmeling">Stefan Harmeling</a>.
+              <p>I am a PhD student at the <a href="https://cs.hhu.de">Heinrich Heine University Düsseldorf</a> supervised by <a href="https://www.cs.hhu.de/en/research-groups/machine-learning/our-team/team/harmeling">Stefan Harmeling</a>. My interests include machine learning, deep learning and image processing.
               </p>
               <p>
-                  I did my Bachelor's and Masters's degree in computer science with minor in mathematics in Düsseldorf.
+                  I did my Bachelor's and Master's degree in computer science with a minor in mathematics in Düsseldorf.
               </p>
              
               <p style="text-align:center">
@@ -35,7 +35,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/me.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/me.jpg" class="hoverZoomLink"></a>
+              <a href="images/me.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/me.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -44,7 +44,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                  My studies focus on solving phase retrieval problems using deep neural networks but moreover I am enthusiastic about everything that involves pixels and machine learning. I also work on adversarial attacks (and their detection) for deep neural networks.
+                  My studies focus on solving phase retrieval problems using deep neural networks and I also work on adversarial attacks (and their detection) for deep neural networks. Moreover, I am enthusiastic about everything that involves pixels and machine learning. 
               </p>
             </td>
           </tr>
@@ -273,7 +273,7 @@ This paper extensively evaluates the vulnerability of capsule networks to differ
               <heading>Reviewing</heading>
               <p>
                   <ul>
-                    <li><b>Conferences/Workshops:</b> ICLR 2022, NeurIPS 2021, ICANN 2021, ICLR 2021, ML Reproducibility Challenge 2020, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
+                    <li><b>Conferences/Workshops:</b> ICLR 2022, NeurIPS 2021 ICBINB Workshop, NeurIPS 2021, ICANN 2021, ICLR 2021, ML Reproducibility Challenge 2020, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
                     <li><b>Journals:</b> IEEE Transactions on Neural Networks and Learning Systems, Journal of Open Source Software</li>
                   </ul>
               </p>
