--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
               <p style="text-align:center">
                 <name>Tobias Uelwer</name>
               </p>
-              <p>I am a PhD student at the <a href="https://cs.hhu.de">Heinrich Heine University Düsseldorf</a> supervised by <a href="https://www.cs.hhu.de/en/research-groups/machine-learning/our-team/team/harmeling">Stefan Harmeling</a>. My interests include machine learning, deep learning and image processing.
+              <p>I am a PhD student at the <a href="https://cs.hhu.de">Heinrich Heine University Düsseldorf</a> supervised by <a href="https://www.cs.hhu.de/en/research-groups/machine-learning/our-team/team/harmeling">Prof. Dr. Stefan Harmeling</a>. My interests include machine learning, deep learning and image processing.
               </p>
               <p>
                   I did my Bachelor's and Master's degree in computer science with a minor in mathematics in Düsseldorf.
               </p>
              
               <p style="text-align:center">
-                <a href="mailto:tobias.uelwer@hhu.de">Email</a> &nbsp/&nbsp
+                <a href="mailto:tobias.uelwer@hhu.de">Email</a> / 
                 <a href="https://scholar.google.com/citations?user=Y5WkfA8AAAAJ">Google Scholar</a> / 
                 <a href="https://dblp.org/pid/242/9083.html&nbsp/&nbsp">DBLP</a> / 
                 <a href="https://twitter.com/tuelwer">Twitter</a> / 
