--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               <p style="text-align:center">
                 <name>Tobias Uelwer</name>
               </p>
-              <p>I am a PhD student at the <a href="https://cs.hhu.de">Heinrich Heine University Düsseldorf</a> supervised by <a href="https://www.cs.hhu.de/en/research-groups/machine-learning/our-team/team/harmeling">Prof. Dr. Stefan Harmeling</a>. My interests include machine learning, deep learning and image processing.
+              <p>I am a PhD student at the <a href="https://www.cs.tu-dortmund.de">Department of Computer Science at the Technical University Dortmund</a> supervised by Prof. Dr. Stefan Harmeling. My interests include machine learning, deep learning and image processing.
               </p>
               <p>
-                  I did my Bachelor's and Master's degree in computer science with a minor in mathematics in Düsseldorf.
+                  I did my Bachelor's and Master's degree in computer science with a minor in mathematics at the <a href="https://cs.hhu.de">Heinrich Heine University Düsseldorf</a>.
               </p>
              
               <p style="text-align:center">
@@ -273,7 +273,7 @@ This paper extensively evaluates the vulnerability of capsule networks to differ
               <heading>Reviewing</heading>
               <p>
                   <ul>
-                    <li><b>Conferences/Workshops:</b> ICLR 2022, NeurIPS 2021 ICBINB Workshop, NeurIPS 2021, ICANN 2021, ICLR 2021, ML Reproducibility Challenge 2020, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
+                    <li><b>Conferences/Workshops:</b> ICML 2022, ML Reproducibility Challenge 2021 Fall Edition, ICLR 2022, NeurIPS 2021 ICBINB Workshop, NeurIPS 2021, ICANN 2021, ICLR 2021, ML Reproducibility Challenge 2020, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
                     <li><b>Journals:</b> IEEE Transactions on Neural Networks and Learning Systems, Journal of Open Source Software</li>
                   </ul>
               </p>
