--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <papertitle>[Re] Solving Phase Retrieval With a Learned Reference</papertitle>
                     </a>
                     <br>
-                    <strong>Tobias Uelwer*</strong>, Sebastian Konietzny*, Stefan Harmeling (*equal contribution)
+                    Nick Rucks, <strong>Tobias Uelwer</strong>, Stefan Harmeling
                     <br>
                     <em>ReScience C (ML Reproducibility Challenge 2021)</em>
                     <br>
