--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <a href="data/bib/rucks2021re.bib">bibtex</a> / 
                     <a href="https://zenodo.org/record/6574695/files/article.pdf">report</a>
                     <p></p>
-                    <p>We reproduce and extend the experimental results from the ECCV 2020 paper "[Re] Solving Phase Retrieval With a Learned Reference" by Hyder et al.</p>
+                    <p>We reproduce and extend the experimental results from the ECCV 2020 paper "Solving Phase Retrieval With a Learned Reference" by Hyder et al.</p>
 					<p>This work was presented at the NeurIPS 2022 Journal Showcase Track.</p>
                 </td>
             </tr>
