--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Tobias Uelwer</name>
               </p>
-              <p>I am a PhD student at the <a href="https://www.cs.tu-dortmund.de">Department of Computer Science at the Technical University Dortmund</a> supervised by Prof. Dr. Stefan Harmeling. My interests include machine learning, deep learning and image processing.
+              <p>I am a PhD student at the <a href="https://www.cs.tu-dortmund.de">Department of Computer Science at the Technical University Dortmund</a> supervised by Prof. Dr. Stefan Harmeling. My interests include machine learning, deep learning and inverse problems.
               </p>
               <p>
                   I did my Bachelor's and Master's degree in computer science with a minor in mathematics at the <a href="https://cs.hhu.de">Heinrich Heine University Düsseldorf</a>.
