--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
                 </td>
             </tr>
 			
+            <tr>
+				
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                    <img src='images/2022-icbinb.png', width="160", heigh="160">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+					
+                    <a href="">
+                        <papertitle>Evaluating Robust Perceptual Losses for Image Reconstruction</papertitle>
+                    </a>
+                    <br>
+                    <strong>Tobias Uelwer</strong>, Felix Michels, Oliver De Candido
+                    <br>
+                    <em>NeurIPS 2022 ICBINB Workshop - Understanding Deep Learning Through Empirical Falsification</em>
+                    <br>
+                    <a href="">bibtex</a> / 
+                    <a href="">paper</a>
+                    <p></p>
+                    <p>We show that robust perceptual losses do not perform better than non-robust ones for image super-resolution.</p>
+                </td>
+            </tr>
+			
 			
 			
             <tr>
