--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               <p style="text-align:center">
                 <name>Tobias Uelwer</name>
               </p>
-              <p>I am a PhD student at the <a href="https://www.cs.tu-dortmund.de">Department of Computer Science at the Technical University Dortmund</a> supervised by Prof. Dr. Stefan Harmeling. My interests include machine learning, deep learning and inverse problems.
+              <p>I am a postdoctoral researcher in the <a href="https://www.ai.cs.tu-dortmund.de">Artificial Intelligence Group at the Technical University of Dortmund</a>. I did my PhD degree under supervision of <a href="https://ai.cs.tu-dortmund.de/staff/harmeling-lab/prof-dr-stefan-harmeling/">Prof. Dr. Stefan Harmeling</a> in the same group. My research interests include machine learning and its applications in different areas.
               </p>
               <p>
-                  I did my Bachelor's and Master's degree in computer science with a minor in mathematics at the <a href="https://cs.hhu.de">Heinrich Heine University Düsseldorf</a>.
+                  I obtained my Bachelor's and Master's degree in computer science with a minor in mathematics from the <a href="https://cs.hhu.de">Heinrich Heine University Düsseldorf</a>.
               </p>
              
               <p style="text-align:center">
@@ -44,7 +44,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                  My research focus on solving phase retrieval problems using deep neural networks and I also work on adversarial attacks (and their detection) for deep neural networks. Moreover, I am enthusiastic about everything that involves pixels and machine learning. 
+                  My research focus on solving inverse problems, e.g., phase retrieval or CT, using deep neural networks and I also work on adversarial examples for deep neural networks. I am enthusiastic about everything that involves pixels and machine learning. 
               </p><br>
 			  <heading>Selected Publications</heading>
             </td>
@@ -91,8 +91,8 @@
                     <br>
                     <em>NeurIPS 2022 ICBINB Workshop - Understanding Deep Learning Through Empirical Falsification</em>
                     <br>
-                    <a href="">bibtex</a> / 
-                    <a href="">paper</a>
+                    <a href="data/bib/uelwer2022evaluating.bib">bibtex</a> / 
+                    <a href="https://openreview.net/pdf?id=Jxn-jKvml4">paper</a>
                     <p></p>
                     <p>We show that robust perceptual losses do not perform better than non-robust ones for image super-resolution.</p>
                 </td>
@@ -346,7 +346,7 @@ This paper extensively evaluates the vulnerability of capsule networks to differ
               <heading>Reviewing</heading>
               <p>
                   <ul>
-                    <li><b>Conferences/Workshops:</b> NeurIPS 2022 ICBINB Workshop, NeurIPS 2022 AI4Science Workshop, ICML 2022, ML Reproducibility Challenge 2021 Fall Edition, ICLR 2022, NeurIPS 2021 ICBINB Workshop, NeurIPS 2021, ICANN 2021, ICLR 2021, ML Reproducibility Challenge 2020, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
+                    <li><b>Conferences/Workshops:</b> NeurIPS 2023, AABI Symposium@ICML 2023, ICANN 2023, ICML 2023, NeurIPS 2022 ICBINB Workshop, NeurIPS 2022 AI4Science Workshop, ICML 2022, ML Reproducibility Challenge 2021 Fall Edition, ICLR 2022, NeurIPS 2021 ICBINB Workshop, NeurIPS 2021, ICANN 2021, ICLR 2021, ML Reproducibility Challenge 2020, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
                     <li><b>Journals:</b> Inverse Problems & Imaging, Optics Express, IEEE Transactions on Neural Networks and Learning Systems, Journal of Open Source Software</li>
                   </ul>
               </p>
@@ -362,6 +362,7 @@ This paper extensively evaluates the vulnerability of capsule networks to differ
               <p>
 				  At Department of Computer Science at the Technical University of Dortmund:
                   <ul>
+					<li><b>Undergraduate Project: Reproducibility in Machine Learning Research:</b> summer 2023</li>
                     <li><b>Probabilistic Reasoning and Machine Learning:</b> winter 2022</li>
 					<li><b>Data Structures, Algorithms and Programming II:</b> summer 2022</li>
                   </ul>
@@ -391,11 +392,13 @@ This paper extensively evaluates the vulnerability of capsule networks to differ
               <heading>News</heading>
               <p>
                   <ul>
-					<li><b>November 2022:</b> Tom, Jan, Sebastian, Stefan and I have won the <a href="https://www.fips.fi/HTCresults.php#anchor1">Helsinki Tomography Challenge 2022.</a></li>
+					<li><b>August 2023:</b> I successfully defended my PhD thesis and am now a doctor!
+					<li><b>July 2023:</b> I am co-organizer of this year's <a href="https://sites.google.com/view/icbinb-2023">ICBINB workshop at NeurIPS 2023</a>.
+					<li><b>November 2022:</b> Tom, Jan, Sebastian, Stefan and I have won the <a href="https://www.fips.fi/HTCresults.php#anchor1">Helsinki Tomography Challenge 2022</a>.</li>
 					<li><b>April 2022:</b> Our group is joining the Department of Computer Science at the Technical University of Dortmund. </li>
                     <li><b>May 2022:</b> I have received an outstanding Reviewer Award at the ML Reproducibility Challenge 2021. </li>
 					<li><b>April 2020:</b> I am volunteering for ICLR 2020.</li>
-					<li><b>March 2020:</b> I am spending two weeks at the Max Plank Insitute for Intelligent Systems in Tübingen.</li>
+					<li><b>March 2020:</b> I am spending two weeks at the Max Plank Institute for Intelligent Systems in Tübingen.</li>
 					<li><b>August 2019:</b> I am participating at the Machine Learning Summer School at the Skolkovo Institute of Science and Technology in Moscow.</li>
 					
                   </ul>
