--- a/index.html
+++ b/index.html
@@ -393,10 +393,12 @@ This paper extensively evaluates the vulnerability of capsule networks to differ
               <p>
                   <ul>
 					<li><b>August 2023:</b> I successfully defended my PhD thesis and am now a doctor!
-					<li><b>July 2023:</b> I am co-organizer of this year's <a href="https://sites.google.com/view/icbinb-2023">ICBINB workshop at NeurIPS 2023</a>.
+					<li><b>July 2023:</b> I am co-organizer of this year's <a
+						 href="https://sites.google.com/view/icbinb-2023">ICBINB workshop at NeurIPS 2023</a>.
+					<li><b>May 2023:</b> I have received an <a href="https://paperswithcode.com/rc2022">outstanding Reviewer Award from the ML Reproducibility Challenge 2022</a>. </li>
 					<li><b>November 2022:</b> Tom, Jan, Sebastian, Stefan and I have won the <a href="https://www.fips.fi/HTCresults.php#anchor1">Helsinki Tomography Challenge 2022</a>.</li>
 					<li><b>April 2022:</b> Our group is joining the Department of Computer Science at the Technical University of Dortmund. </li>
-                    <li><b>May 2022:</b> I have received an outstanding Reviewer Award at the ML Reproducibility Challenge 2021. </li>
+                    <li><b>May 2022:</b> I have received an outstanding Reviewer Award from the ML Reproducibility Challenge 2021. </li>
 					<li><b>April 2020:</b> I am volunteering for ICLR 2020.</li>
 					<li><b>March 2020:</b> I am spending two weeks at the Max Plank Institute for Intelligent Systems in Tübingen.</li>
 					<li><b>August 2019:</b> I am participating at the Machine Learning Summer School at the Skolkovo Institute of Science and Technology in Moscow.</li>
