--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ This paper extensively evaluates the vulnerability of capsule networks to differ
 					<li><b>April 2022:</b> Our group is joining the Department of Computer Science at the Technical University of Dortmund. </li>
                     <li><b>May 2022:</b> I have received an outstanding Reviewer Award from the ML Reproducibility Challenge 2021. </li>
 					<li><b>April 2020:</b> I am volunteering for ICLR 2020.</li>
-					<li><b>March 2020:</b> I am spending two weeks at the Max Plank Institute for Intelligent Systems in Tübingen.</li>
+					<li><b>March 2020:</b> I am spending two weeks at the Max Planck Institute for Intelligent Systems in Tübingen.</li>
 					<li><b>August 2019:</b> I am participating at the Machine Learning Summer School at the Skolkovo Institute of Science and Technology in Moscow.</li>
 					
                   </ul>
