--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                  My research focus on solving inverse problems, e.g., phase retrieval or CT, using deep neural networks and I also work on adversarial examples for deep neural networks. I am enthusiastic about everything that involves pixels and machine learning. 
+                  My research focus on solving inverse problems, e.g., phase retrieval or CT, using deep neural networks and I also work on adversarial examples for deep neural networks. I am enthusiastic about everything that involves machine learning. 
               </p><br>
 			  <heading>Selected Publications</heading>
             </td>
