--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                     <br />
                     <em>ArXiv preprint (submitted to a journal)</em>
                     <br />
-                    <a href="data/bib/uelwer2023learning.bib">bibtex</a> /
-                    <a href="https://arxiv.org/abs/2308.11455">paper</a>
+                    <a href="https://arxiv.org/abs/2308.11455">paper</a> / 
+                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/uelwer2023learning.bib">bibtex</a> 
                     <p></p>
                     <p>
                       This survey paper provides a comprehensive review of these
@@ -205,8 +205,8 @@
                     <br />
                     <em>Journal of Machine Learning Research (JMLR)</em>
                     <br />
-                    <a href="data/bib/uelwer2023learning.bib">bibtex</a> /
-                    <a href="https://jmlr.org/papers/v24/22-0106.html">paper</a>
+                    <a href="https://jmlr.org/papers/v24/22-0106.html">paper</a> /
+                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/uelwer2023learning.bib">bibtex</a>
                     <p></p>
                     <p>
                       Conditional generative adversarial networks can be used to
@@ -247,10 +247,11 @@
                       (ICLR), 2023</em
                     >
                     <br />
-                    <a href="data/bib/robine2023twm.bib">bibtex</a> /
                     <a href="https://openreview.net/forum?id=TdBaDGCpjly"
                       >paper</a
                     >
+                    /
+                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/robine2023twm.bib">bibtex</a> 
                     /
                     <a href="https://github.com/jrobine/twm">code </a>
                     <p></p>
@@ -289,10 +290,10 @@
                     <br />
                     <em>Transactions on Machine Learning Research (TMLR)</em>
                     <br />
-                    <a href="data/bib/uelwer2022optimizing.bib">bibtex</a> /
                     <a href="https://openreview.net/forum?id=YAVE6jfeJb"
                       >paper</a
-                    >
+                    > /
+                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/uelwer2022optimizing.bib">bibtex</a>
                     <p></p>
                     <p>
                       Refined intermediate layer optimization of generative
@@ -333,10 +334,10 @@
                       Learning Through Empirical Falsification</em
                     >
                     <br />
-                    <a href="data/bib/uelwer2022evaluating.bib">bibtex</a> /
                     <a href="https://openreview.net/forum?id=Jxn-jKvml4"
                       >paper</a
-                    >
+                    > /
+                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/uelwer2022evaluating.bib">bibtex</a>
                     <p></p>
                     <p>
                       We show that robust perceptual losses do not perform
@@ -373,11 +374,11 @@
                     <br />
                     <em>Magnetic Resonance in Medicine, 2021</em>
                     <br />
-                    <a href="data/bib/rower2021spirometry.bib">bibtex</a> /
                     <a
                       href="https://onlinelibrary.wiley.com/doi/10.1002/mrm.28892"
                       >paper</a
-                    >
+                    > / 
+                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/rower2021spirometry.bib">bibtex</a>
                     /
                     <a href="https://doi.org/10.5281/zenodo.4899285"
                       >supplementary material</a
@@ -417,12 +418,11 @@
                     <br />
                     <em>Journal of Open Source Software (JOSS), 2020</em>
                     <br />
-                    <a href="data/bib/germer2020pymatting.bib">bibtex</a> /
                     <a
                       href="https://www.theoj.org/joss-papers/joss.02481/10.21105.joss.02481.pdf"
                       >paper</a
-                    >
-                    /
+                    > /
+                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/germer2020pymatting.bib">bibtex</a> /
                     <a href="https://github.com/pymatting/pymatting"
                       >repository</a
                     >
@@ -465,8 +465,8 @@
                       Learning</em
                     >
                     <br />
-                    <a href="data/bib/michels2019vulnerability.bib">bibtex</a> /
                     <a href="https://arxiv.org/abs/1906.03612">paper</a> /
+                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/michels2019vulnerability.bib">bibtex</a> /
                     <a href="data/posters/michels2019vulnerability.pdf"
                       >poster</a
                     >
