--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </p>
 
                     <p style="text-align: center">
-                      <a href="mailto:tobias.uelwer@iais.fraunhofer.de"
+                      <a href="mailto:tobiasuelwer@microsoft.com"
                         >Email</a
                       >
                       /
@@ -85,7 +85,7 @@
                       >
                       /
                       <a
-                        href="https://de.linkedin.com/in/dr-tobias-uelwer-b688401a4"
+                        href="https://de.linkedin.com/in/tobias-uelwer-b688401a4"
                         >LinkedIn</a
                       >
                       /
