--- a/index.html
+++ b/index.html
@@ -44,25 +44,28 @@
                       <name>Tobias Uelwer</name>
                     </p>
                     <p>
-                      I am a data scientist at
+                      I am a applied scientist at Microsoft, where I work on
+                      natural language generation for the <a href="https://www.microsoft.com/en-us/health-solutions/clinical-workflow/dragon-copilot">Microsoft Dragon Copilot</a>. 
+                    Previously, I was a data scientist at
                       <a href="https://www.iais.fraunhofer.de"
                         >Fraunhofer IAIS</a
                       >
-                      and I am also affiliated with the
+                      and was also affiliated with the
                       <a href="https://lamarr-institute.org"
                         >Lamarr Institute for Machine Learning and Artificial
                         Intelligence</a
-                      >. Previously, I was a researcher in the
+                      >. 
+                    </p>
+                    
+                    <p> I completed my PhD in the
                       <a href="https://www.ai.cs.tu-dortmund.de"
                         >Artificial Intelligence Group at the Technical
                         University of Dortmund</a
-                      >, where I completed my PhD under the supervision of
+                      > under the supervision of
                       <a
                         href="https://ai.cs.tu-dortmund.de/staff/harmeling-lab/prof-dr-stefan-harmeling/"
                         >Prof. Dr. Stefan Harmeling</a
                       >.
-                    </p>
-                    <p>
                       I obtained my Bachelor's and Master's degrees in computer
                       science with a minor in mathematics from the
                       <a href="https://cs.hhu.de"
@@ -150,7 +153,7 @@
                 <tr>
                   <td style="padding: 20px; width: 25%; vertical-align: middle">
                     <img
-                      src="data/images/2024-survey.png"
+                      src="data/images/2025-survey.png"
                       ,
                       width="160"
                       ,
@@ -160,8 +163,7 @@
                   <td style="padding: 20px; width: 75%; vertical-align: middle">
                     <a href="https://arxiv.org/abs/2308.11455">
                       <papertitle
-                        >A Survey on Self-Supervised Representation
-                        Learning</papertitle
+                        >A Survey on Self-supervised Methods for Visual Representation Learning</papertitle
                       >
                     </a>
                     <br />
@@ -169,10 +171,10 @@
                     Wagner, Marc Höftmann, Eric Upschulte, Sebastian Konietzny,
                     Maike Behrendt, Stefan Harmeling
                     <br />
-                    <em>ArXiv preprint (submitted to a journal)</em>
+                    <em>Machine Learning</em>
                     <br />
-                    <a href="https://arxiv.org/abs/2308.11455">paper</a> / 
-                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/uelwer2023learning.bib">bibtex</a> 
+                    <a href="https://link.springer.com/article/10.1007/s10994-024-06708-7">paper</a> / 
+                    <a href="https://raw.githubusercontent.com/tuelwer/tuelwer.github.io/master/data/bib/uelwer2025survey.bib">bibtex</a> 
                     <p></p>
                     <p>
                       This survey paper provides a comprehensive review of these
@@ -492,11 +494,12 @@
               <tbody>
                 <tr>
                   <td>
-                    <heading>Service for the Scientific Community</heading>
+                    <heading>Service to the Scientific Community</heading>
                     <ul>
                       <li>
-                        <b>Conferences/Workshops:</b> TinyPapers@ICLR 2024 (Area
-                        Chair), AI4Science Workshop@ICML 2024, NeurIPS 2023,
+                        <b>Conferences/Workshops:</b> AABI Symposium@ICML 2025, Workshop Proposals@ICML 2025, 
+                        Blog Posts@ICLR 2025, TinyPapers@ICLR 2024 (Area Chair), AI4Science Workshop@ICML 2024, 
+                        Workshop Proposals@ICML 2024, NeurIPS 2023,
                         AABI Symposium@ICML 2023, ICANN 2023, ICML 2023, NeurIPS
                         2022 ICBINB Workshop, NeurIPS 2022 AI4Science Workshop,
                         ICML 2022, ML Reproducibility Challenge 2021 Fall
@@ -506,7 +509,7 @@
                         NeurIPS 2019
                       </li>
                       <li>
-                        <b>Journals:</b> Inverse Problems & Imaging, Optics
+                        <b>Journals:</b> Transactions on Machine Learning Research, Inverse Problems & Imaging, Optics
                         Express, IEEE Transactions on Neural Networks and
                         Learning Systems, Journal of Open Source Software
                       </li>
@@ -534,10 +537,11 @@
 
                     <ul>
                       <li>
-                        <b
-                          >Undergraduate Project: Reproducibility in Machine
-                          Learning Research:</b
-                        >
+                        <b>Mathematics for Computer Science:</b> winter 2023
+                      </li>
+                      <li>
+                        <b>Undergraduate Project: Reproducibility in Machine
+                          Learning Research:</b>
                         summer 2023
                       </li>
                       <li>
@@ -598,6 +602,15 @@
                   <td>
                     <heading>News</heading>
                     <ul>
+                      <li>
+                          <b>January 2025:</b> I am joining Microsoft as an applied scientist working on Dragon Copilot.
+                        </li>
+                        <li>
+                          <b>December 2024:</b> I am co-organizing the 
+                          <a href="https://sites.google.com/view/icbinb-2025"
+                            >ICBINB workshop at ICLR 2025</a
+                          >.
+                        </li>
                       <li>
                         <b>May 2024:</b> I am starting a new position as data
                         scientist at the Fraunhofer IAIS, where I will work on
