--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                     <heading>News</heading>
                     <ul>
                       <li>
-                          <b>January 2025:</b> I am joining Microsoft as an applied scientist working on Dragon Copilot.
+                          <b>January 2025:</b> I am joining Microsoft as an applied scientist working on the Dragon Copilot.
                         </li>
                         <li>
                           <b>December 2024:</b> I am co-organizing the 
