--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
               "
             >
               <tbody>
-                <tr>
-                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                <tr class="publication-table">
+                  <td class="image-cell">
                     <img
                       src="data/images/2025-survey.png"
                       ,
@@ -160,7 +160,7 @@
                       heigh="160"
                     />
                   </td>
-                  <td style="padding: 20px; width: 75%; vertical-align: middle">
+                  <td class="text-cell">
                     <a href="https://arxiv.org/abs/2308.11455">
                       <papertitle
                         >A Survey on Self-supervised Methods for Visual Representation Learning</papertitle
@@ -184,8 +184,8 @@
                     </p>
                   </td>
                 </tr>
-                <tr>
-                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                <tr class="publication-table">
+                  <td class="image-cell">
                     <img
                       src="data/images/2023-jmlr-learning.png"
                       ,
@@ -194,7 +194,7 @@
                       heigh="160"
                     />
                   </td>
-                  <td style="padding: 20px; width: 75%; vertical-align: middle">
+                  <td class="text-cell">
                     <a href="https://jmlr.org/papers/v24/22-0106.html">
                       <papertitle
                         >Learning Conditional Generative Models for Phase
@@ -223,8 +223,8 @@
                   </td>
                 </tr>
                 <tr></tr>
-                <tr>
-                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                <tr class="publication-table">
+                  <td class="image-cell">
                     <img
                       src="data/images/2023-twm.png"
                       ,
@@ -233,7 +233,7 @@
                       heigh="160"
                     />
                   </td>
-                  <td style="padding: 20px; width: 75%; vertical-align: middle">
+                  <td class="text-cell">
                     <a href="https://openreview.net/forum?id=TdBaDGCpjly">
                       <papertitle
                         >Transformer-based World Models Are Happy With 100k
@@ -269,8 +269,8 @@
                     </p>
                   </td>
                 </tr>
-                <tr>
-                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                <tr class="publication-table">
+                  <td class="image-cell">
                     <img
                       src="data/images/2022-tmlr.png"
                       ,
@@ -279,7 +279,7 @@
                       heigh="160"
                     />
                   </td>
-                  <td style="padding: 20px; width: 75%; vertical-align: middle">
+                  <td class="text-cell">
                     <a href="https://openreview.net/pdf?id=YAVE6jfeJb">
                       <papertitle
                         >Optimizing Intermediate Representations of Generative
@@ -310,8 +310,8 @@
                   </td>
                 </tr>
 
-                <tr>
-                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                <tr class="publication-table">
+                  <td class="image-cell">
                     <img
                       src="data/images/2022-icbinb.png"
                       ,
@@ -320,7 +320,7 @@
                       heigh="160"
                     />
                   </td>
-                  <td style="padding: 20px; width: 75%; vertical-align: middle">
+                  <td class="text-cell">
                     <a href="https://openreview.net/forum?id=Jxn-jKvml4">
                       <papertitle
                         >Evaluating Robust Perceptual Losses for Image
@@ -348,8 +348,8 @@
                   </td>
                 </tr>
 
-                <tr>
-                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                <tr class="publication-table">
+                  <td class="image-cell">
                     <img
                       src="data/images/2021-mrm.png"
                       ,
@@ -358,7 +358,7 @@
                       heigh="160"
                     />
                   </td>
-                  <td style="padding: 20px; width: 75%; vertical-align: middle">
+                  <td class="text-cell">
                     <a
                       href="https://onlinelibrary.wiley.com/doi/10.1002/mrm.28892"
                     >
@@ -395,8 +395,8 @@
                   </td>
                 </tr>
 
-                <tr>
-                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                <tr class="publication-table">
+                  <td class="image-cell">
                     <img
                       src="data/images/2020-joss.png"
                       ,
@@ -405,7 +405,7 @@
                       heigh="160"
                     />
                   </td>
-                  <td style="padding: 20px; width: 75%; vertical-align: middle">
+                  <td class="text-cell">
                     <a
                       href="https://www.theoj.org/joss-papers/joss.02481/10.21105.joss.02481.pdf"
                     >
@@ -441,8 +441,8 @@
                   </td>
                 </tr>
 
-                <tr>
-                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                <tr class="publication-table">
+                  <td class="image-cell">
                     <img
                       src="data/images/2019-icml-workshop.png"
                       ,
@@ -451,7 +451,7 @@
                       heigh="160"
                     />
                   </td>
-                  <td style="padding: 20px; width: 75%; vertical-align: middle">
+                  <td class="text-cell">
                     <a href="https://arxiv.org/abs/1906.03612">
                       <papertitle
                         >On the Vulnerability of Capsule Networks to Adversarial
