Scaling for mobile

--- a/index.html
+++ b/index.html
@@ -153,11 +153,7 @@
                 <tr class="publication-table">
                   <td class="image-cell">
                     <img
-                      src="data/images/2025-survey.png"
-                      ,
-                      width="160"
-                      ,
-                      heigh="160"
+                      src="data/images/2025-survey.png", style="max-width: 100%; height: auto;"
                     />
                   </td>
                   <td class="text-cell">
@@ -187,11 +183,7 @@
                 <tr class="publication-table">
                   <td class="image-cell">
                     <img
-                      src="data/images/2023-jmlr-learning.png"
-                      ,
-                      width="160"
-                      ,
-                      heigh="160"
+                      src="data/images/2023-jmlr-learning.png", style="max-width: 100%; height: auto;"
                     />
                   </td>
                   <td class="text-cell">
@@ -226,11 +218,7 @@
                 <tr class="publication-table">
                   <td class="image-cell">
                     <img
-                      src="data/images/2023-twm.png"
-                      ,
-                      width="160"
-                      ,
-                      heigh="160"
+                      src="data/images/2023-twm.png", style="max-width: 100%; height: auto;"
                     />
                   </td>
                   <td class="text-cell">
@@ -272,11 +260,7 @@
                 <tr class="publication-table">
                   <td class="image-cell">
                     <img
-                      src="data/images/2022-tmlr.png"
-                      ,
-                      width="160"
-                      ,
-                      heigh="160"
+                      src="data/images/2022-tmlr.png", style="max-width: 100%; height: auto;"
                     />
                   </td>
                   <td class="text-cell">
@@ -313,11 +297,7 @@
                 <tr class="publication-table">
                   <td class="image-cell">
                     <img
-                      src="data/images/2022-icbinb.png"
-                      ,
-                      width="160"
-                      ,
-                      heigh="160"
+                      src="data/images/2022-icbinb.png", style="max-width: 100%; height: auto;"
                     />
                   </td>
                   <td class="text-cell">
@@ -351,11 +331,7 @@
                 <tr class="publication-table">
                   <td class="image-cell">
                     <img
-                      src="data/images/2021-mrm.png"
-                      ,
-                      width="160"
-                      ,
-                      heigh="160"
+                      src="data/images/2021-mrm.png", style="max-width: 100%; height: auto;"
                     />
                   </td>
                   <td class="text-cell">
@@ -398,11 +374,7 @@
                 <tr class="publication-table">
                   <td class="image-cell">
                     <img
-                      src="data/images/2020-joss.png"
-                      ,
-                      width="160"
-                      ,
-                      heigh="160"
+                      src="data/images/2020-joss.png", style="max-width: 100%; height: auto;"
                     />
                   </td>
                   <td class="text-cell">
@@ -444,11 +416,7 @@
                 <tr class="publication-table">
                   <td class="image-cell">
                     <img
-                      src="data/images/2019-icml-workshop.png"
-                      ,
-                      width="160"
-                      ,
-                      heigh="160"
+                      src="data/images/2019-icml-workshop.png", style="max-width: 100%; height: auto;"
                     />
                   </td>
                   <td class="text-cell">
