--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                       <name>Tobias Uelwer</name>
                     </p>
                     <p>
-                      I am a applied scientist at Microsoft, where I work on
+                      I am an applied scientist at Microsoft, where I work on
                       natural language generation for the <a href="https://www.microsoft.com/en-us/health-solutions/clinical-workflow/dragon-copilot">Microsoft Dragon Copilot</a>. 
                     Previously, I was a data scientist at
                       <a href="https://www.iais.fraunhofer.de"
